update all test cases